--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,48 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/LinearLayout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".SignInActivity">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/login_email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="textEmailAddress"
+
         tools:layout_editor_absoluteX="169dp"
         tools:layout_editor_absoluteY="43dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/login_pass_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="textPassword"
+
         tools:layout_editor_absoluteX="169dp"
         tools:layout_editor_absoluteY="102dp" />
-
-    <EditText
-        android:id="@+id/editText3"
+    <Button
+        android:text="LOGIN"
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="174dp" />
-
-    <EditText
-        android:id="@+id/editText4"
+        />
+    <Button
+        android:text="CREATE ACCOUNT"
+        android:id="@+id/signup_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="254dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
+</LinearLayout>
