Home cards color

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/baige"
+            android:background="#fff"
             app:tabIndicatorColor="@color/colorAccent"
             app:tabIndicatorGravity="bottom"
             app:tabMode="scrollable"
