--- a/app/src/main/res/layout/layout_grid_item.xml
+++ b/app/src/main/res/layout/layout_grid_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
         app:cardElevation="2dp"
+        android:backgroundTint="@color/baige"
         android:layout_centerHorizontal="true">
 
         <RelativeLayout
