--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,41 +1,253 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/LinearLayout"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".SignInActivity">
+    >
 
-    <EditText
-        android:id="@+id/login_email_text"
+<RelativeLayout
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@color/layoutcolor">
+
+
+
+<RelativeLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="130dp"
+    android:background="@color/backroundcolor">
+
+    <ImageView
+        android:layout_marginTop="10dp"
+        android:id="@+id/icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="43dp" />
-
-    <EditText
-        android:id="@+id/login_pass_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
-
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="102dp" />
-    <Button
-        android:text="LOGIN"
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/person"/>
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="30dp"
+        android:src="@drawable/plus"
+        android:layout_marginVertical="80dp"
+        android:layout_marginHorizontal="220dp"
         />
+
+</RelativeLayout>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/nameicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="150dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="5dp"
+        android:src="@drawable/ic_person" />
+
+    <EditText
+        android:id="@+id/name"
+        android:hint="  full name"
+        android:layout_centerHorizontal="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="150dp"
+        android:padding="12dp"
+
+        />
+
+    <ImageView
+        android:id="@+id/emailicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_email_black_24dp"
+        android:layout_below="@id/nameicon"
+        android:layout_marginTop="24dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp" />
+
+    <EditText
+        android:id="@+id/email"
+        android:hint="  E-mail"
+        android:layout_below="@id/name"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/passicon"
+        android:layout_below="@id/emailicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_fill_lock"
+        android:layout_marginTop="27dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp" />
+
+    <EditText
+        android:id="@+id/pass"
+        android:hint="  Password"
+        android:layout_below="@id/email"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:drawableRight="@drawable/eye"
+        android:layout_centerInParent="true"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"
+        />
+
+    <ImageView
+        android:id="@+id/phoneicon"
+        android:layout_below="@id/passicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_phone_black_24dp"
+        android:layout_marginTop="27dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp"
+        />
+
+    <EditText
+        android:id="@+id/phonenum"
+        android:hint="  Phone Number"
+        android:layout_below="@id/pass"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/addressicon"
+        android:layout_below="@id/phoneicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_location_on_black_24dp"
+        android:layout_marginTop="27dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp" />
+
+    <EditText
+        android:id="@+id/address"
+        android:hint="Address"
+        android:layout_below="@+id/phonenum"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/semicon"
+        android:layout_below="@id/addressicon"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_study"
+        android:layout_marginTop="27dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp" />
+
+    <EditText
+        android:id="@+id/sem"
+        android:hint="  Semester"
+        android:layout_below="@id/address"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/branchicon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/semicon"
+        android:layout_marginTop="21dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:src="@drawable/ic_books_stack_of_three" />
+
+    <EditText
+        android:id="@+id/branch"
+        android:hint="  Branch"
+        android:layout_below="@id/sem"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/enoicon"
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/branchicon"
+        android:layout_marginTop="14dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="5dp"
+        android:src="@drawable/ic_view_list_black_24dp" />
+
+    <EditText
+        android:id="@+id/eno"
+        android:hint="  Enrollment Number"
+        android:layout_below="@id/branch"
+        android:layout_centerInParent="true"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+    <ImageView
+        android:id="@+id/clgicon"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/enoicon"
+        android:paddingTop="27dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:src="@drawable/ic_company" />
+
+    <EditText
+        android:id="@+id/clg"
+        android:hint="  College"
+        android:layout_below="@+id/eno"
+        android:layout_width="320dp"
+        android:layout_centerInParent="true"
+        android:layout_height="45dp"
+        android:background="@drawable/editwithoutcolor"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"/>
+
+
     <Button
-        android:text="CREATE ACCOUNT"
-        android:id="@+id/signup_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+
+        android:id="@+id/signin"
+        android:layout_below="@id/clg"
+        android:layout_width="150dp"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"
+        android:text="Sign up"
+        android:textColor="@color/layoutcolor"
+        />
+
+</RelativeLayout>
+
+
+</RelativeLayout>
+
+</ScrollView>
