--- a/app/src/main/res/layout/layout_grid_item.xml
+++ b/app/src/main/res/layout/layout_grid_item.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
+        android:background="@drawable/img_view_radius"
         app:cardElevation="2dp"
         android:backgroundTint="@color/baige"
         android:layout_centerHorizontal="true">
