--- a/app/src/main/res/layout/activity_sale_item_detail.xml
+++ b/app/src/main/res/layout/activity_sale_item_detail.xml
@@ -61,8 +61,8 @@
 
     <TextView
         android:id="@+id/book_writer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="78dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:text="By J.S Khatre"
 
@@ -102,7 +102,7 @@
         />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/book_request_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
@@ -151,36 +151,37 @@
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="STATUS"
+        android:layout_marginTop="24dp"
 
+        android:text="STATUS"
         android:textSize="15dp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.867"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toEndOf="@+id/seller_name"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/book_request_button" />
 
     <TextView
         android:id="@+id/status_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="208dp"
+        android:layout_marginTop="36dp"
         android:text="Requested"
         app:layout_constraintStart_toEndOf="@+id/seller_number"
         app:layout_constraintTop_toBottomOf="@+id/status" />
 
     <TextView
-        android:id="@+id/countofrequest"
+        android:id="@+id/count_request"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already 10 people have requested"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
 
-        android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.439"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/status_value"
-        app:layout_constraintVertical_bias="0.636" />
+        app:layout_constraintVertical_bias="0.98" />
 </androidx.constraintlayout.widget.ConstraintLayout>
