--- a/app/src/main/res/layout/activity_sell_all.xml
+++ b/app/src/main/res/layout/activity_sell_all.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SellAllActivity">
+    tools:context=".SellAllActivity"
+    android:fitsSystemWindows="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            app:tabIndicatorColor="@color/colorAccent"
+            app:tabIndicatorGravity="bottom"
+            app:tabMode="scrollable"
+            app:tabRippleColor="#86ABCE"
+            app:tabTextColor="#3C3F41">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/bookSell"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Book Sell" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/toolSell"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tool Sell" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/studyMaterialSell"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Study Material Sell" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/otherSell"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Other Material Sell" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        </androidx.viewpager.widget.ViewPager>
+
+    </LinearLayout>
+
+</RelativeLayout>
