--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:background="@color/backroundcolor">
+            android:background="@color/backgroundcolor">
 
             <ImageView
                 android:id="@+id/icon"
