--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,12 +6,14 @@
     <group android:checkableBehavior="single">
 
         <item android:id="@+id/nav_home"
-            android:icon="@drawable/ic_homepage"
-            android:title="Home"/>
+            android:icon="@drawable/ic_home"
+            android:title="Home"
+            />
 
         <item
             android:id="@+id/nav_requestedItems"
             android:title="Requested Items"
+            android:icon="@drawable/ic_list"
             />
 
 
