--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,11 +9,12 @@
     <color name="colorbutton">#EF4B4C</color>
     <color name="colortext">#DCDAE8</color>
     <color name="layoutcolor">#ffff</color>
-    <color name="backroundcolor">#DCDAE8</color>
+    <color name="backgroundcolor">#DCDAE8</color>
     <color name="cardcolor">#F05D5E</color>
     <color name="colortexti">#292A49</color>
     <color name="Red">#F56460</color>
     <color name="Dark_Blue">#3B375B</color>
     <color name="White">#FFFFFF</color>
+
 
 </resources>
