--- a/app/src/main/res/layout/fragment_tool_sell.xml
+++ b/app/src/main/res/layout/fragment_tool_sell.xml
@@ -98,7 +98,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
-                    android:id="@+id/btnSell"
+                    android:id="@+id/btnSellTool"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_centerHorizontal="true"
