Solved Error of requested Item Fragment

--- a/app/src/main/res/layout/requested_items.xml
+++ b/app/src/main/res/layout/requested_items.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:layout_margin="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/request_item_card"
